--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
             <div class="content">
                 <div class="info">
                     <h3> <i class="fas fa-envelope"></i> mprerna802@gmail.com </h3><br>
-                    <h3> <i class="fas fa-mobile-alt"></i> +91 9821830727</h3><br>
+<!--                     <h3> <i class="fas fa-mobile-alt"></i> +91 9821830727</h3><br> -->
                     
-                    <h3> <i class="fas fa-map-marker-alt"></i> Delhi, india </h3><br>
+                    <h3> <i class="fas fa-map-marker-alt"></i> Delhi, India </h3><br>
                 </div>
             </div>
         </div>
